--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/node": "^13.7.0",
+    "dotenv": "^8.2.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
